<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dam2.pmm_practica_05_javiersanzrozalen.GameActivity"
    android:orientation="vertical"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:background="@color/fondo_naranja"
    android:gravity="center">

    <TextView
        android:hint="Castañer Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNickname"
        android:textSize="35dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:text="@string/string_fase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFase"
        android:textSize="25dp"
        android:gravity="center" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal|center"
        android:layout_gravity="center_vertical|center_horizontal|center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:text="@string/str_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1" />

            <Button
                android:text="@string/str_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:text="@string/str_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3" />

            <Button
                android:text="@string/str_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4" />
        </TableRow>

    </TableLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar" />

    <TextView
        android:text="@string/string_porcentaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPorcentaje"
        android:gravity="center" />

</LinearLayout>
