<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cuestom_dialog_end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dam2.pmm_practica_05_javiersanzrozalen.CuestomDialogEnd"
    android:orientation="vertical">


    <TextView
        android:text="@string/str_customDialogEnd_felicidadesUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFelicidadesUsuario"
        android:gravity="center" />

    <TextView
        android:text="@string/str_customDialogEnd_numFaseRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFaseRecord"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/str_customDialogEnd_cerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCerrar"
            android:layout_weight="1"
            android:background="@color/rojo"/>

        <Button
            android:text="@string/str_customDialogEnd_seguirJugando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSeguirJugando"
            android:layout_weight="1"
            android:background="@color/verde"/>
    </LinearLayout>
</LinearLayout>
